add notify dupplicate, bookmark, rating
