# db/schema.rb
@@ -58,7 +58,6 @@ ActiveRecord::Schema[7.0].define(version: 2023_02_20_051411) do
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
     t.index ["course_id"], name: "index_comments_on_course_id"
-    t.index ["user_id", "course_id"], name: "index_comments_on_user_id_and_course_id", unique: true
     t.index ["user_id"], name: "index_comments_on_user_id"
   end
 
